tests/snapshots/errors/print_map_no_tostring.mc
// Error: Map does not implement ToString
let m = Map<string, int>::`new`();
print(m);
